k8s/user-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user
  labels:
    app: user
spec:
  selector:
    app: user
  ports:
  - protocol: TCP
    port: 3000
    targetPort: http
