k8s/user-service/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: user
  labels:
    app: user
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`viscord.local`) && (PathPrefix(`/api/users`) || PathPrefix(`/api/user-profiles`) || PathPrefix(`/api/relationships`)) && !PathPrefix(`/api/users/me/channels`)
      services:
        - name: user
          port: 3000
      middlewares:
        - name: strip-api-prefix
        - name: forward-auth
